--- a/examples/Makefile
+++ b/examples/Makefile
@@ -48,6 +48,7 @@ TEST_PYTHON := tests_python.mk
 TEST_HASKELL := tests_haskell.mk
 TEST_NODEJS := tests_nodejs.mk
 TEST_CSHARP := tests_csharp.mk
+TEST_PERL := tests_perl.mk
 TEST_ALL_LANGUAGES := tests_all.mk
 
 dir := integers
@@ -65,7 +66,7 @@ include ${dir}/rules.mk
 dir := vector_return
 include ${dir}/rules.mk
 
-all: c ruby python haskell nodejs csharp
+all: c ruby python haskell nodejs csharp perl
 .PHONY: all
 
 # Test only a single language
@@ -79,5 +80,6 @@ python:
 haskell:
 nodejs:
 csharp:
+perl:
 
-.PHONY: c ruby python haskell nodejs csharp
+.PHONY: c ruby python haskell nodejs csharp perl
